fix: Render whitespace for postDetail screen

--- a/client/src/screens/PostDetail/index.scss
+++ b/client/src/screens/PostDetail/index.scss
@@ -105,6 +105,7 @@
     .description {
       text-align: justify;
       line-height: 1.6;
+      white-space: pre-wrap;
     }
 
     .add-comment-container {
